# RookieAI_yolov8

./: OPTIMIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  RookieAI.py  pyproject.toml
Module/: config.py  const.py
